fixed alignment

--- a/packages/terra-alert/src/Alert.module.scss
+++ b/packages/terra-alert/src/Alert.module.scss
@@ -74,7 +74,7 @@
   }
 
   .actions {
-    align-items: flex-start;
+    align-items: center;
     display: flex;
     flex-direction: row;
     flex-shrink: 0;
